# SimpleComputer

./: .gitignore  CMakeLists.txt  main.cpp  mySimpleComputer.cpp  mySimpleComputer.h  myTerm.h
src/: main.cpp  myReadKey.cpp  myReadKey.h  mySimpleComputer.cpp  mySimpleComputer.h  mySimpleHandler.cpp  mySimpleHandler.h
